<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/margin_2"
    app:cardElevation="@dimen/margin_3"
    app:contentPadding="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.tools.photolab.effect.custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8"
            android:text="@string/txt_delete_message"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/textsize_20" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <com.tools.photolab.effect.custom.CustomTextView
                android:id="@+id/tvNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:paddingRight="@dimen/margin_16"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/txt_no"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_16" />

            <com.tools.photolab.effect.custom.CustomTextView
                android:id="@+id/tvYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_16"
                android:paddingTop="@dimen/margin_8"
                android:paddingRight="@dimen/margin_16"
                android:paddingBottom="@dimen/margin_8"
                android:text="@string/txt_yes"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_16" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>